--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Bienvenido a Claudio Nogal Portilla</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Claudio Nogal Portilla</title>
+  </head>  
+  <body>
+    <h1>Bienvenido a Claudio Nogal Portilla</h1>
+    <body>
+      Aqui va mi CV
+    </body>
+  </body>
+</html>
