--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
   <head>
     <title>Claudio Nogal Portilla</title>
   </head>  
-  <body>
+  <body style="background-color:powderblue;">
     <h1>Bienvenido a Claudio Nogal Portilla</h1>
+    <h2>Currículum Vitae</h2>
     <body>
-      Aqui va mi CV
+      
+    <h3>Datos:</h3>
+    <p>
+      Nombre: Claudio Nogal Portilla
+      Dirección: Calle Toledo Mz Q Lte 23 Mayorazgo - Ate
+      Teléfono: 951896598
+      Correo: claudio.nogal@gmail.com
+      </p>
+    <h3>Formación académica:</h3>
+Secundaria completa
+
+Ingeniería Informática (trunco) en la Universidad Peruana Cayetano Heredia desde 2009 a 2014
+Experiencia:
+
+Servicio Técnico en los Laboratorios de Investigación y Desarrollo UPCH
+
+Mantenimiento de las computadoras del aula interactiva
+Coordinar horarios de actividades en el laboratorio
+Mantener el orden y la buena aparecía del laboratorio
+Auxiliar Logístico en Consulting&Management S.A.C. para Grupo Deltron S.A.
+Recibir y procesar, usando la herramienta web de administración de almacén, los equipos o repuestos de todas las sucursales de Lima y Provincia.
+Mantener el inventario y hacer seguimiento de los productos que realicen su recorrido en el área. 
+Redistribuir los equipos y repuestos a sus áreas correspondientes, ya sea Almacén, Reparación Técnica o Ventas.
+Ejercer otras funciones relacionadas al área, necesarias para el cumplimiento de la estrategia empresarial. 
+Idioma:
+Ingles intermedio
+Habilidades:
+Lenguajes de programación Java, Python
+Familiarizado con programación orientada a objetos, C/C++ y SQL
+Microsoft Windows, Microsoft Office, Ubuntu
+
     </body>
   </body>
 </html>
