--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <body>
       
     <h3>Datos:</h3>
-    <p>
+    <pre>
       Nombre: Claudio Nogal Portilla
       Dirección: Calle Toledo Mz Q Lte 23 Mayorazgo - Ate
       Teléfono: 951896598
       Correo: claudio.nogal@gmail.com
-      </p>
+     </pre>
     <h3>Formación académica:</h3>
 Secundaria completa
 
