--- a/index.html
+++ b/index.html
@@ -9,35 +9,40 @@
     <body>
       
     <h3>Datos:</h3>
-    <pre>
-      Nombre: Claudio Nogal Portilla
-      Dirección: Calle Toledo Mz Q Lte 23 Mayorazgo - Ate
-      Teléfono: 951896598
+    <p>
+      Nombre: Claudio Nogal Portilla<br>
+      Dirección: Calle Toledo Mz Q Lte 23 Mayorazgo - Ate<br>
+      Teléfono: 951896598<br>
       Correo: claudio.nogal@gmail.com
-     </pre>
+     </p>
     <h3>Formación académica:</h3>
-Secundaria completa
+    <ul>
+      <li>Secundaria completa</li>
+      <li>Ingeniería Informática (trunco) en la Universidad Peruana Cayetano Heredia desde 2009 a 2014</li>
+    </ul>
+    <h3>Experiencia:</h3>
 
-Ingeniería Informática (trunco) en la Universidad Peruana Cayetano Heredia desde 2009 a 2014
-Experiencia:
-
-Servicio Técnico en los Laboratorios de Investigación y Desarrollo UPCH
-
-Mantenimiento de las computadoras del aula interactiva
-Coordinar horarios de actividades en el laboratorio
-Mantener el orden y la buena aparecía del laboratorio
-Auxiliar Logístico en Consulting&Management S.A.C. para Grupo Deltron S.A.
-Recibir y procesar, usando la herramienta web de administración de almacén, los equipos o repuestos de todas las sucursales de Lima y Provincia.
-Mantener el inventario y hacer seguimiento de los productos que realicen su recorrido en el área. 
-Redistribuir los equipos y repuestos a sus áreas correspondientes, ya sea Almacén, Reparación Técnica o Ventas.
-Ejercer otras funciones relacionadas al área, necesarias para el cumplimiento de la estrategia empresarial. 
-Idioma:
-Ingles intermedio
-Habilidades:
-Lenguajes de programación Java, Python
-Familiarizado con programación orientada a objetos, C/C++ y SQL
-Microsoft Windows, Microsoft Office, Ubuntu
-
+      <b>Servicio Técnico en los Laboratorios de Investigación y Desarrollo UPCH</b>
+      <ul>
+      <li>Mantenimiento de las computadoras del aula interactiva</li>
+      <li>Coordinar horarios de actividades en el laboratorio</li>
+      <li>Mantener el orden y la buena aparecía del laboratorio</li>
+      </ul>
+      <b>Auxiliar Logístico en Consulting&Management S.A.C. para Grupo Deltron S.A.
+      <li>Recibir y procesar, usando la herramienta web de administración de almacén, los equipos o repuestos de todas las sucursales de Lima y Provincia.</li>
+      <li>Mantener el inventario y hacer seguimiento de los productos que realicen su recorrido en el área.</li> 
+      <li>Redistribuir los equipos y repuestos a sus áreas correspondientes, ya sea Almacén, Reparación Técnica o Ventas.</li>
+      <li>Ejercer otras funciones relacionadas al área, necesarias para el cumplimiento de la estrategia empresarial.</li> 
+<b>Idioma:</b>
+  <ul>
+    <li>Ingles intermedio</li>
+  </ul>
+    <b>Habilidades:</b>
+        <ul>
+<li>Lenguajes de programación Java, Python</li>
+<li>Familiarizado con programación orientada a objetos, C/C++ y SQL</li>
+<li>Microsoft Windows, Microsoft Office, Ubuntu</li>
+</ul>
     </body>
   </body>
 </html>
