--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
       <li>Coordinar horarios de actividades en el laboratorio</li>
       <li>Mantener el orden y la buena aparecía del laboratorio</li>
       </ul>
-      <b>Auxiliar Logístico en Consulting&Management S.A.C. para Grupo Deltron S.A.
+      <b>Auxiliar Logístico en Consulting&Management S.A.C. para Grupo Deltron S.A.</b>
+      <ul>
       <li>Recibir y procesar, usando la herramienta web de administración de almacén, los equipos o repuestos de todas las sucursales de Lima y Provincia.</li>
       <li>Mantener el inventario y hacer seguimiento de los productos que realicen su recorrido en el área.</li> 
       <li>Redistribuir los equipos y repuestos a sus áreas correspondientes, ya sea Almacén, Reparación Técnica o Ventas.</li>
       <li>Ejercer otras funciones relacionadas al área, necesarias para el cumplimiento de la estrategia empresarial.</li> 
-<b>Idioma:</b>
+      </ul>
+        <b>Idioma:</b>
   <ul>
     <li>Ingles intermedio</li>
   </ul>
