--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <li>Redistribuir los equipos y repuestos a sus áreas correspondientes, ya sea Almacén, Reparación Técnica o Ventas.</li>
       <li>Ejercer otras funciones relacionadas al área, necesarias para el cumplimiento de la estrategia empresarial.</li> 
       </ul>
-        <b>Idioma:</b>
+        <h3>Idioma:</h3>
   <ul>
     <li>Ingles intermedio</li>
   </ul>
-    <b>Habilidades:</b>
+    <h3>Habilidades:</h3>
         <ul>
 <li>Lenguajes de programación Java, Python</li>
 <li>Familiarizado con programación orientada a objetos, C/C++ y SQL</li>
