--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <title>Claudio Nogal Portilla</title>
   </head>  
-  <body style="background-color:powderblue;">
+  <body>
     <h1>Bienvenido a Claudio Nogal Portilla</h1>
     <h2>Currículum Vitae</h2>
     <body>
