--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       
     <h3>Datos:</h3>
     <p>
+      <img src="72217184.jpg" alt="mi foto" style="float:right">
       Nombre: Claudio Nogal Portilla<br>
       Dirección: Calle Toledo Mz Q Lte 23 Mayorazgo - Ate<br>
       Teléfono: 951896598<br>
