--- a/index.html
+++ b/index.html
@@ -1,51 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <title>Claudio Nogal Portilla</title>
-  </head>  
-  <body>
-    <h1>Bienvenido a Claudio Nogal Portilla</h1>
-    <h2>Currículum Vitae</h2>
-    <body>
-    <img src="72217184.jpg" alt="mi foto" style="float:right">
-    <h3>Datos:</h3>
-    <p>
-      Nombre: Claudio Nogal Portilla<br>
-      Dirección: Calle Toledo Mz Q Lte 23 Mayorazgo - Ate<br>
-      Teléfono: 951896598<br>
-      Correo: claudio.nogal@gmail.com
-     </p>
-    <h3>Formación académica:</h3>
-    <ul>
-      <li>Secundaria completa</li>
-      <li>Ingeniería Informática (trunco) en la Universidad Peruana Cayetano Heredia desde 2009 a 2014</li>
-    </ul>
-    <h3>Experiencia:</h3>
+<head>
+<style>
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
 
-      <b>Servicio Técnico en los Laboratorios de Investigación y Desarrollo UPCH</b>
-      <ul>
-      <li>Mantenimiento de las computadoras del aula interactiva</li>
-      <li>Coordinar horarios de actividades en el laboratorio</li>
-      <li>Mantener el orden y la buena aparecía del laboratorio</li>
-      </ul>
-      <b>Auxiliar Logístico en Consulting&Management S.A.C. para Grupo Deltron S.A.</b>
-      <ul>
-      <li>Recibir y procesar, usando la herramienta web de administración de almacén, los equipos o repuestos de todas las sucursales de Lima y Provincia.</li>
-      <li>Mantener el inventario y hacer seguimiento de los productos que realicen su recorrido en el área.</li> 
-      <li>Redistribuir los equipos y repuestos a sus áreas correspondientes, ya sea Almacén, Reparación Técnica o Ventas.</li>
-      <li>Ejercer otras funciones relacionadas al área, necesarias para el cumplimiento de la estrategia empresarial.</li> 
-      </ul>
-        <h3>Idioma:</h3>
-  <ul>
-    <li>Ingles intermedio</li>
-  </ul>
-    <h3>Habilidades:</h3>
-        <ul>
-<li>Lenguajes de programación Java, Python</li>
-<li>Familiarizado con programación orientada a objetos, C/C++ y SQL</li>
-<li>Microsoft Windows, Microsoft Office, Ubuntu</li>
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #111111;
+}
+</style>
+</head>
+<body>
+
+<h2>Navigation Menu</h2>
+<p>In this example, we use CSS to style the list horizontally, to create a navigation menu:</p>
+
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="curriculo.html">Curriculo</a></li>
+  <li><a href="#about">About</a></li>
 </ul>
-    </body>
-  </body>
+
+</body>
 </html>
