--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@ li a:hover {
 <p>In this example, we use CSS to style the list horizontally, to create a navigation menu:</p>
 
 <ul>
-  <li><a href="#home">Home</a></li>
+  <!--<li><a href="#home">Home</a></li>
   <li><a href="#news">News</a></li>
   <li><a href="curriculo.html">Curriculo</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#about">About</a></li>-->
+  <li><a href="curriculo.html">Curriculo</a></li>
 </ul>
 
 </body>
