--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ li a:hover {
 </head>
 <body>
 
-<h2>Navigation Menu</h2>
-<p>In this example, we use CSS to style the list horizontally, to create a navigation menu:</p>
+<h2>BIENVENIDO  a  Claudio Salvador Nogal Portilla</h2>
+<p>Pagina en construccion:</p>
 
 <ul>
   <!--<li><a href="#home">Home</a></li>
