--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ li a:hover {
 <ul>
   <!--<li><a href="#home">Home</a></li>
   <li><a href="#news">News</a></li>
-  <li><a href="curriculo.html">Curriculo</a></li>
-  <li><a href="#about">About</a></li>-->
+  <li><a href="curriculo.html">Curriculo</a></li>-->
+  <li><a href="contacto.html">Contacto</a></li>
   <li><a href="curriculo.html">Curriculo</a></li>
 </ul>
 
