--- a/curriculo.html
+++ b/curriculo.html
@@ -11,9 +11,7 @@
     <h3>Datos:</h3>
     <p>
       Nombre: Claudio Nogal Portilla<br>
-      Dirección: Calle Toledo Mz Q Lte 23 Mayorazgo - Ate<br>
-      Teléfono: 951896598<br>
-      Correo: claudio.nogal@gmail.com
+      Dirección: Calle Toledo Mz Q Lte 23 Mayorazgo - Ate
      </p>
     <h3>Formación académica:</h3>
     <ul>
