--- a/contacto.html
+++ b/contacto.html
@@ -3,6 +3,7 @@
 <title>Claudio Nogal Portilla</title>
 </head>
 <body>
+  <h1>Contacto</h1>
   <p>
   Teléfono: 951896598<br>
   Correo: claudio.nogal@gmail.com
