--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
 <body>
   <h1>Contacto</h1>
   <p>
-  Teléfono: 951896598<br>
+  Teléfono: 951-896-598<br>
   Correo: claudio.nogal@gmail.com
   </p>
 </body>
